--- a/SBC.Framework.Utility/SBC.Framework.Utility.csproj
+++ b/SBC.Framework.Utility/SBC.Framework.Utility.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{38EB15D0-B7C1-418F-8036-93A889FA4270}</ProjectGuid>
+    <ProjectGuid>{C5491BDC-223F-4DF4-856D-B405A85A5F26}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SBC.Dal</RootNamespace>
-    <AssemblyName>SBC.Dal</AssemblyName>
+    <RootNamespace>SBC.Framework.Utility</RootNamespace>
+    <AssemblyName>SBC.Framework.Utility</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,16 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,29 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Generic Repository\implement\GenericRepository.cs" />
-    <Compile Include="Generic Repository\Interface\IGenericRepository.cs" />
+    <Compile Include="ActionStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\Implement\TypeRepository.cs" />
-    <Compile Include="Repositories\Interface\ITypeRepository.cs" />
-    <Compile Include="Unit Of Work\Implement\UnitOfWork.cs" />
-    <Compile Include="Unit Of Work\Interface\IUnitOfWork.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SBC.Data\SBC.Data.csproj">
-      <Project>{4f99782c-9603-41f2-add1-9e9d2c54fcc8}</Project>
-      <Name>SBC.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SBC.Framework.Utility\SBC.Framework.Utility.csproj">
-      <Project>{c5491bdc-223f-4df4-856d-b405a85a5f26}</Project>
-      <Name>SBC.Framework.Utility</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
