--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\SBC.Dal\packages.config" />
   <repository path="..\SBC.Data\packages.config" />
   <repository path="..\SBC.Web\packages.config" />
 </repositories>
